<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/cl_ct"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sp_dark_gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sp_dark_gray">

        <TextView
            android:id="@+id/tv_ct_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/sp_green"
            android:padding="30dp"/>

        <EditText
            android:id="@+id/et_ct_title"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/title"
            android:textColorHint="@color/sp_white"
            android:textColor="@color/sp_white"
            android:background="@color/sp_light_gray"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_ct_date"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:background="@color/sp_light_gray"
            android:textColor="@color/sp_white"
            android:textColorHint="@color/sp_white"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/date"
            android:importantForAutofill="no" />
        <Spinner
            android:id="@+id/sp_ct_group"
            android:layout_width="390dp"
            android:spinnerMode="dialog"
            android:layout_height="wrap_content"
            android:textColor="@color/sp_white"
            android:background="@color/sp_light_gray"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/group" />

        <EditText
            android:id="@+id/et_ct_description"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:background="@color/sp_light_gray"
            android:textColor="@color/sp_white"
            android:textColorHint="@color/sp_white"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:lines="10"
            android:hint="@string/description"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_ct_save"
            android:layout_width="390dp"
            android:layout_height="60dp"
            android:text="@string/create"
            android:layout_gravity="center"
            android:textColor="@color/sp_white"
            />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>